--- a/TP1/api.ipynb
+++ b/TP1/api.ipynb
@@ -2,45 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'File': {'Url': 'https://www.iptc.org/std-dev/photometadata/examples/google-licensable/images/IPTC-GoogleImgSrcPmd_testimg01.jpg', 'FileName': 'IPTC-GoogleImgSrcPmd_testimg01.jpg', 'FileSize': 2003501, 'FileModifyDate': '2024:10:21 21:36:48+00:00', 'FileAccessDate': '2024:10:21 21:36:10+00:00', 'FileInodeChangeDate': '2024:10:21 21:36:48+00:00', 'FileType': 'JPEG', 'FileTypeExtension': 'jpg', 'MIMEType': 'image/jpeg', 'ExifByteOrder': 'Big-endian (Motorola, MM)', 'CurrentIPTCDigest': '41217b4048df3572ab711f4cdfffe43e', 'ImageWidth': 3000, 'ImageHeight': 2006, 'EncodingProcess': 'Baseline DCT, Huffman coding', 'BitsPerSample': 8, 'ColorComponents': 3, 'YCbCrSubSampling': 'YCbCr4:4:4 (1 1)'}, 'EXIF': {'ImageDescription': 'The railways of the S45 line are running very close to a small street with parking cars', 'XResolution': 72, 'YResolution': 72, 'ResolutionUnit': 'inches', 'Artist': 'Jane Photosty', 'YCbCrPositioning': 'Centered', 'Copyright': '© Copyright 2020 IPTC (Test Images) - www.iptc.org'}, 'IPTC': {'SpecialInstructions': 'This photo is for metadata testing purposes only', 'DateCreated': '2020:01:08', 'TimeCreated': '13:30:01+01:00', 'By-line': 'Jane Photosty', 'Headline': 'The railway and the cars', 'Credit': 'IPTC/Jane Photosty', 'CopyrightNotice': '© Copyright 2020 IPTC (Test Images) - www.iptc.org', 'Caption-Abstract': 'The railways of the S45 line are running very close to a small street with parking cars', 'ApplicationRecordVersion': 4}, 'XMP': {'XMPToolkit': 'Image::ExifTool 11.74', 'Creator': 'Jane Photosty', 'Description': 'The railways of the S45 line are running very close to a small street with parking cars', 'Rights': '© Copyright 2020 IPTC (Test Images) - www.iptc.org', 'Credit': 'IPTC/Jane Photosty', 'DateCreated': '2020:01:08 13:30:01+01:00', 'Headline': 'The railway and the cars', 'Instructions': 'This photo is for metadata testing purposes only', 'CopyrightOwnerID': 'https://iptc.org', 'CopyrightOwnerName': 'IPTC - International Press Telecommunications Council', 'ImageCreatorID': 'https://example.com/photogs/JanePhotosty', 'ImageCreatorName': 'Jane Photosty', 'LicensorID': 'https://iptc.org', 'LicensorName': 'IPTC - International Press Telecommunications Council', 'LicensorURL': 'https://iptc.org/tests/licensing-of-images-test-page/', 'UsageTerms': 'All rights reserved. To use this image an explicit license granted by IPTC is required.', 'WebStatement': 'https://iptc.org/tests/copyright-and-licenses-of-images-test-page/'}, 'APP14': {'DCTEncodeVersion': 100, 'APP14Flags0': '[14], Encoded with Blend=1 downsampling', 'APP14Flags1': '(none)', 'ColorTransform': 'YCbCr'}, 'Composite': {'ImageSize': '3000x2006', 'Megapixels': 6.0, 'DateTimeCreated': '2020:01:08 13:30:01+01:00', 'DateTimeOriginal': '2020:01:08 13:30:01+01:00'}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "url = \"https://metadata-extractor.p.rapidapi.com/\"\n",
-    "\n",
-    "\n",
-    "headers = {\n",
-    "\t\"x-rapidapi-key\": \"519967ec58msh8f8329a6c2932aap1db175jsnb84000c3ed54\",\n",
-    "\t\"x-rapidapi-host\": \"metadata-extractor.p.rapidapi.com\"\n",
-    "}\n",
-    "file_path = r\"C:\\Users\\duboi\\MA2TAC\\tac\\TP1\\pdf_files\\KB_JB92_1860-02-09_01-00003.pdf\"\n",
-    "\n",
-    "response = requests.get(url, headers=headers, params=querystring)\n",
-    "\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,25 +26,73 @@
     "    'x-rapidapi-host': \"metadata-extractor.p.rapidapi.com\"\n",
     "}\n",
     "\n",
-    "# Specify the file path of the file (PDF, image, etc.) you want to extract metadata from\n",
+    "# où est le pdf\n",
     "file_path = r\"C:\\Users\\duboi\\MA2TAC\\tac\\TP1\\pdf_files\\KB_JB92_1860-02-09_01-00003.pdf\"\n",
     "\n",
-    "# Prepare the file to send with the request\n",
+    "\n",
     "files = {\n",
-    "    'file': open(file_path, 'rb')  # Open the file in binary mode\n",
+    "    'file': open(file_path, 'rb')  \n",
     "}\n",
     "\n",
-    "# Send the request to the Metadata Extractor API\n",
+    "# request\n",
     "response = requests.post(url, headers=headers, files=files)\n",
     "\n",
-    "# Check if the request was successful\n",
+    "# check le request\n",
     "if response.status_code == 200:\n",
-    "    # Parse and print the extracted metadata\n",
+    "    \n",
     "    metadata = json.loads(response.text)\n",
-    "    print(\"Extracted Metadata:\\n\", json.dumps(metadata, indent=4))  # Pretty print the metadata\n",
+    "    print(\"Extracted Metadata:\\n\", json.dumps(metadata, indent=4)) \n",
     "else:\n",
     "    print(f\"Failed to extract metadata. Status code: {response.status_code}\")\n",
     "    print(\"Response:\", response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: could not open directory 'TP1/TP1/': No such file or directory\n",
+      "fatal: pathspec 'TP1/api_script.py' did not match any files\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   ../module1/s1_sql.ipynb\n",
+      "\tdeleted:    ../module1/s3_scrape.ipynb\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\tapi.ipynb\n",
+      "\t../hello.py\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add TP1/api.ipynb\n",
+    "!git commit -m \"add API (even though doesn't quite work but code seems ok)\"\n",
+    "!git push origin main\n"
    ]
   }
  ],
