--- a/tps/tp2/Notebook_TP2.ipynb
+++ b/tps/tp2/Notebook_TP2.ipynb
@@ -561,6 +561,337 @@
     "cloud.to_file(os.path.join(temp_path, f\"{year}.png\"))\n",
     "Image(filename=os.path.join(temp_path, f\"{year}.png\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting fr-core-news-md==3.5.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.5.0/fr_core_news_md-3.5.0-py3-none-any.whl (45.8 MB)\n",
+      "     --------------------------------------- 45.8/45.8 MB 11.7 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: spacy<3.6.0,>=3.5.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from fr-core-news-md==3.5.0) (3.5.2)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.0.12)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.0.5)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.0.10)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2.0.8)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.0.9)\n",
+      "Requirement already satisfied: thinc<8.2.0,>=8.1.8 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (8.1.12)\n",
+      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.1.3)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2.4.8)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2.0.10)\n",
+      "Requirement already satisfied: typer<0.8.0,>=0.3.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.7.0)\n",
+      "Requirement already satisfied: pathy>=0.10.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.11.0)\n",
+      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (6.4.0)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (4.66.5)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.26.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2.32.0)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.10.13)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.1.4)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (75.2.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (24.1)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.4.1)\n",
+      "Requirement already satisfied: language-data>=1.2 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from langcodes<4.0.0,>=3.2.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.2.0)\n",
+      "Requirement already satisfied: pathlib-abc==0.1.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from pathy>=0.10.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.1.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (4.12.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (2024.8.30)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.7.11)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from thinc<8.2.0,>=8.1.8->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.1.5)\n",
+      "Requirement already satisfied: colorama in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (0.4.6)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from typer<0.8.0,>=0.3.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (8.1.7)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from jinja2->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (3.0.2)\n",
+      "Requirement already satisfied: marisa-trie>=0.7.7 in c:\\users\\duboi\\ma2tac\\tac\\tac_venv\\lib\\site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy<3.6.0,>=3.5.0->fr-core-news-md==3.5.0) (1.2.1)\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('fr_core_news_md')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import os\n",
+    "import spacy\n",
+    "\n",
+    "# Charger le modèle de langue français de spaCy\n",
+    "!python -m spacy download fr_core_news_md\n",
+    "nlp = spacy.load('fr_core_news_md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir le chemin vers le dossier contenant les fichiers texte et l'année cible\n",
+    "txt_path = \"C:/Users/duboi/MA2TAC/tac/data/txt\"\n",
+    "year = \"1941\"\n",
+    "\n",
+    "# Filtrer les fichiers de l'année 1941\n",
+    "files = [f for f in os.listdir(txt_path) if f.endswith('.txt') and year in f]\n",
+    "\n",
+    "# Charger le contenu des fichiers de l'année 1941\n",
+    "text = \"\"\n",
+    "for f in files:\n",
+    "    with open(os.path.join(txt_path, f), 'r', encoding='utf-8') as file:\n",
+    "        text += file.read() + \" \"  # Ajouter un espace entre chaque fichier pour éviter de coller les textes\n",
+    "\n",
+    "# Limiter la taille du texte si nécessaire (pour gérer les grands volumes)\n",
+    "n = 1000000  # Limite de caractères à traiter\n",
+    "text = text[:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Traiter le texte avec spaCy pour extraire les entités nommées\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Compter les entités nommées\n",
+    "people = defaultdict(int)\n",
+    "organizations = defaultdict(int)\n",
+    "locations = defaultdict(int)\n",
+    "\n",
+    "for ent in doc.ents:\n",
+    "    if ent.label_ == \"PER\" and len(ent.text) > 3:  # Personnes\n",
+    "        people[ent.text] += 1\n",
+    "    elif ent.label_ == \"ORG\" and len(ent.text) > 3:  # Organisations\n",
+    "        organizations[ent.text] += 1\n",
+    "    elif ent.label_ == \"LOC\" and len(ent.text) > 3:  # Lieux\n",
+    "        locations[ent.text] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Personnes les plus fréquentes :\n",
+      "Rossel apparait 193 fois\n",
+      "Ecrire Ag apparait 26 fois\n",
+      "Monsieur apparait 22 fois\n",
+      "Roosevelt apparait 14 fois\n",
+      "Roasel apparait 13 fois\n",
+      "M. Matsuoka apparait 13 fois\n",
+      "Darlan apparait 12 fois\n",
+      "trav apparait 12 fois\n",
+      "M. Roosevelt apparait 11 fois\n",
+      "Agence Rossel apparait 11 fois\n",
+      "S. A. apparait 11 fois\n",
+      "Jard apparait 11 fois\n",
+      "Directeur apparait 10 fois\n",
+      "culs apparait 9 fois\n",
+      "Jardin apparait 9 fois\n",
+      "Brugmann apparait 9 fois\n",
+      "Chat Botté apparait 9 fois\n",
+      "Goulet apparait 9 fois\n",
+      "G. P. apparait 9 fois\n",
+      "A. R. apparait 8 fois\n",
+      "Carr apparait 8 fois\n",
+      "Bardia apparait 8 fois\n",
+      "maréchal Pétain apparait 8 fois\n",
+      "référ apparait 8 fois\n",
+      "Rosse apparait 8 fois\n",
+      "N. S. G. apparait 8 fois\n",
+      "Béguin apparait 8 fois\n",
+      "D. N. B. apparait 7 fois\n",
+      "comm apparait 7 fois\n",
+      "Messieurs apparait 7 fois\n",
+      "Tancrède apparait 7 fois\n",
+      "Joseph apparait 6 fois\n",
+      "Churchill apparait 6 fois\n",
+      "de Gaulle apparait 6 fois\n",
+      "MONSIEUR apparait 6 fois\n",
+      "Mertens apparait 6 fois\n",
+      "A. Z. C. apparait 6 fois\n",
+      "Fond apparait 5 fois\n",
+      "Créd apparait 5 fois\n",
+      "M. Greenwood apparait 5 fois\n",
+      "M. Churchill apparait 5 fois\n",
+      "Matsuoka apparait 5 fois\n",
+      "Washington apparait 5 fois\n",
+      "Hoover apparait 5 fois\n",
+      "Lord Halifax apparait 5 fois\n",
+      "Rosael apparait 5 fois\n",
+      "Louise apparait 5 fois\n",
+      "A g. Rossel apparait 5 fois\n",
+      "Bonne apparait 5 fois\n",
+      "g. Rossel apparait 5 fois\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trier les entités nommées par fréquence et imprimer les principales pour chaque catégorie\n",
+    "print(\"\\nPersonnes les plus fréquentes :\")\n",
+    "sorted_people = sorted(people.items(), key=lambda kv: kv[1], reverse=True)\n",
+    "for person, freq in sorted_people[:50]:\n",
+    "    print(f\"{person} apparait {freq} fois\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Organisations les plus fréquentes :\n",
+      "Ford apparait 20 fois\n",
+      "Reich apparait 19 fois\n",
+      "Comité apparait 15 fois\n",
+      "K ON DEM apparait 13 fois\n",
+      "Chevrolet apparait 13 fois\n",
+      "Yougoslavie apparait 13 fois\n",
+      "Acbet apparait 9 fois\n",
+      "Tokio apparait 9 fois\n",
+      "Agence Rossel apparait 9 fois\n",
+      "Renault apparait 8 fois\n",
+      "Marine apparait 7 fois\n",
+      "Secours de la Religion apparait 7 fois\n",
+      "ETAIN apparait 6 fois\n",
+      "K ÔN DEM apparait 6 fois\n",
+      "BRILLANTS apparait 5 fois\n",
+      "Sénat apparait 5 fois\n",
+      "Inst apparait 5 fois\n",
+      "Société Anonyme apparait 5 fois\n",
+      "Congo Belge apparait 5 fois\n",
+      "Ordre de Léopold apparait 5 fois\n",
+      "Chrysler apparait 5 fois\n",
+      "Individuels apparait 5 fois\n",
+      "Intimité apparait 5 fois\n",
+      "Morjau apparait 5 fois\n",
+      "Conseil national apparait 5 fois\n",
+      "Conseil apparait 4 fois\n",
+      "ministre des Affaires étrangères apparait 4 fois\n",
+      "Union Soviétique apparait 4 fois\n",
+      "United Press apparait 4 fois\n",
+      "FIRME apparait 4 fois\n",
+      "JANVIER apparait 4 fois\n",
+      "Chevalier apparait 4 fois\n",
+      "Peugeot apparait 4 fois\n",
+      "Achat apparait 4 fois\n",
+      "Sport apparait 4 fois\n",
+      "Finances apparait 4 fois\n",
+      "Philips apparait 4 fois\n",
+      "Office Central apparait 4 fois\n",
+      "Trusts apparait 3 fois\n",
+      "Aciéries p.s apparait 3 fois\n",
+      "Gilson p.s apparait 3 fois\n",
+      "Téléphone apparait 3 fois\n",
+      "Associated Press apparait 3 fois\n",
+      "Congrès apparait 3 fois\n",
+      "Reich allemand apparait 3 fois\n",
+      "New-York Times apparait 3 fois\n",
+      "b. Inst apparait 3 fois\n",
+      "AGENCE apparait 3 fois\n",
+      "Usines apparait 3 fois\n",
+      "Electricité apparait 3 fois\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nOrganisations les plus fréquentes :\")\n",
+    "sorted_organizations = sorted(organizations.items(), key=lambda kv: kv[1], reverse=True)\n",
+    "for org, freq in sorted_organizations[:50]:\n",
+    "    print(f\"{org} apparait {freq} fois\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Lieux les plus fréquents :\n",
+      "Bruxelles apparait 184 fois\n",
+      "Angleterre apparait 78 fois\n",
+      "Allemagne apparait 77 fois\n",
+      "Anvers apparait 69 fois\n",
+      "Etats-Unis apparait 66 fois\n",
+      "Brux apparait 56 fois\n",
+      "Liège apparait 50 fois\n",
+      "Berlin apparait 50 fois\n",
+      "Belgique apparait 47 fois\n",
+      "France apparait 37 fois\n",
+      "Etat apparait 35 fois\n",
+      "Londres apparait 33 fois\n",
+      "Italie apparait 26 fois\n",
+      "BRUXELLES apparait 24 fois\n",
+      "Distance apparait 23 fois\n",
+      "Nord apparait 22 fois\n",
+      "la France apparait 22 fois\n",
+      "Centre apparait 22 fois\n",
+      "Europe apparait 21 fois\n",
+      "New-York apparait 20 fois\n",
+      "Paris apparait 20 fois\n",
+      "Ixelles apparait 20 fois\n",
+      "Industrie apparait 19 fois\n",
+      "Escaut apparait 19 fois\n",
+      "Washington apparait 18 fois\n",
+      "Uccle apparait 18 fois\n",
+      "Louvain apparait 18 fois\n",
+      "Schaerbeek apparait 18 fois\n",
+      "Hollande apparait 17 fois\n",
+      "Grande-Bretagne apparait 17 fois\n",
+      "Etats apparait 17 fois\n",
+      "Anderlecht apparait 17 fois\n",
+      "Intérieure apparait 16 fois\n",
+      "Méditerranée apparait 15 fois\n",
+      "Anglais apparait 15 fois\n",
+      "Belge apparait 15 fois\n",
+      "le Japon apparait 14 fois\n",
+      "Rome apparait 14 fois\n",
+      "l’Europe apparait 14 fois\n",
+      "Moscou apparait 14 fois\n",
+      "Intimité apparait 14 fois\n",
+      "Réunion apparait 14 fois\n",
+      "Gand apparait 13 fois\n",
+      "A Bruxelles apparait 13 fois\n",
+      "Atlantique apparait 12 fois\n",
+      "Turquie apparait 12 fois\n",
+      "Grèce apparait 11 fois\n",
+      "Allemands apparait 11 fois\n",
+      "Forest apparait 11 fois\n",
+      "Bourse apparait 11 fois\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nLieux les plus fréquents :\")\n",
+    "sorted_locations = sorted(locations.items(), key=lambda kv: kv[1], reverse=True)\n",
+    "for loc, freq in sorted_locations[:50]:\n",
+    "    print(f\"{loc} apparait {freq} fois\")"
+   ]
   }
  ],
  "metadata": {
